<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/paymentReceiptScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/medium_gray"
    tools:context=".PaymentReceipt"
    android:exported="false"

    >
    <LinearLayout
        android:id="@+id/navigationButtons"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/backButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/app_back_button"
            app:icon="@drawable/ic_arrow_back"
            app:iconTint="@color/black"

            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_home_button"
            app:tint="@color/dark_green"
            app:shapeAppearance="@style/FABShape"
            app:backgroundTint="@color/white"
            android:src="@drawable/ic_home"
            app:fabSize="normal"
            android:layout_marginStart="260dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/paymentReceipt"
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:layout_gravity="center"
        android:layout_margin="100dp"
        android:orientation="vertical"
        android:background="@color/white"

        >
        <TextView
            android:id="@+id/paymentReceiptTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:text="@string/comp_pago"
            android:fontFamily="@font/poppins_bold"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            >
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/logo"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_logo"
                android:contentDescription="@string/app_logo"
                >
            </ImageView>
            <LinearLayout
                android:id="@+id/paymentReceiptFixedText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="5dp"
                >
                <TextView
                    android:id="@+id/clientID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/client_id"
                    android:fontFamily="@font/poppins_regular"
                    >

                </TextView>
                <TextView
                    android:id="@+id/receiptDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/receipt_date"
                    android:fontFamily="@font/poppins_regular"
                    >

                </TextView>
                <TextView
                    android:id="@+id/expirationDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expiration_date"
                    android:fontFamily="@font/poppins_regular"
                    >
                </TextView>
                <TextView
                    android:id="@+id/paymentMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_method"
                    android:fontFamily="@font/poppins_regular"
                    >
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/paymentReceiptData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="5dp"
                tools:ignore="RtlSymmetry">
                <TextView
                    android:id="@+id/dataClientID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_client_id"
                    android:fontFamily="@font/poppins_regular"
                    >
                </TextView>
                <TextView
                    android:id="@+id/dataReceiptDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_receipt_date"
                    android:fontFamily="@font/poppins_regular"
                    >
                </TextView>
                <TextView
                    android:id="@+id/dataExpirationDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_expiration_date"
                    android:fontFamily="@font/poppins_regular"
                    >
                </TextView>
                <TextView
                    android:id="@+id/dataPaymentMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_payment_method"
                    android:fontFamily="@font/poppins_regular"
                    >
                </TextView>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_regular"
            >
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_regular"
            >
        </TextView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >
            <LinearLayout
                android:id="@+id/paymentReceiptFixedText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                >
                <TextView
                    android:id="@+id/receive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:textAllCaps="true"
                    android:text="@string/receipt_text1"
                    >

                </TextView>
                <TextView
                    android:id="@+id/sum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:textAllCaps="true"
                    android:text="@string/receipt_text2"
                    >
                </TextView>
                <TextView
                    android:id="@+id/concept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:textAllCaps="true"
                    android:text="@string/receipt_text3"
                    >
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/paymentReceiptData2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                >
                <TextView
                    android:id="@+id/receive_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/data_receipt_text1"
                    >
                </TextView>
                <TextView
                    android:id="@+id/sum_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/data_receipt_text2"
                    >
                </TextView>
                <TextView
                    android:id="@+id/concept_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/data_receipt_text3"
                    >
                </TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/totalReceipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end"
            >
            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/receipt_text4"
                android:textAllCaps="true"
                android:paddingStart="5dp"
                tools:ignore="RtlSymmetry">

            </TextView>
            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/data_receipt_text4"
                android:paddingStart="5dp"
                tools:ignore="RtlSymmetry">

            </TextView>
            <TextView
                android:id="@+id/currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/receipt_text5"
                android:paddingStart="5dp"
                tools:ignore="RtlSymmetry">
            </TextView>
        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/dark_blue"
        android:fontFamily="@font/mulish_semi_bold"
        android:textAllCaps="true"
        android:text="@string/btn_send" />

</LinearLayout>


<!--
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentReceipt"
    tools:ignore="MissingConstraints">

</androidx.constraintlayout.widget.ConstraintLayout>

-->